Update portfolio with resume and latest changes

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link active">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#stats" class="nav-link">Metrics</a></li>
-                <li><a href="#skills" class="nav-link">Arsenal</a></li>
+                <li><a href="#stats" class="nav-link">Achievements</a></li>
+                <li><a href="#skills" class="nav-link">Tech Stack</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
 
@@ -79,6 +79,11 @@
                 style="color: var(--text-secondary); font-size: 18px; letter-spacing: 1px; pointer-events: none; text-shadow: 0 4px 20px rgba(0,0,0,0.8);">
                 EMBEDDED SYSTEMS BACKGROUND
             </p>
+            <div style="margin-top: 30px; pointer-events: auto;">
+                <a href="assets/pdf/Trinadh_dev.pdf" class="btn btn-neon-gold" download>
+                    <span class="btn-content">Download CV</span>
+                </a>
+            </div>
         </div>
         <div class="carousel-container" style="padding-top: 0; margin-top: 20px;">
             <div class="carousel" id="carousel">
@@ -113,11 +118,14 @@
                 <div class="about-text" style="flex: 1; min-width: 300px;">
                     <h2 class="philosophy-headline" style="margin-bottom: 20px; text-align: left;">Bridging Systems &
                         Cloud Networks</h2>
-                    <p style="color: var(--text-secondary); font-size: 18px; line-height: 1.6;">
+                    <p style="color: var(--text-secondary); font-size: 18px; line-height: 1.6; margin-bottom: 30px;">
                         Passionate DevOps & Cloud Engineer with an Embedded Systems background. I specialize in building
                         resilient infrastructures and optimizing CI/CD pipelines while maintaining the precision learned
                         from hardware-level development.
                     </p>
+                    <a href="assets/pdf/Trinadh_dev.pdf" class="btn btn-neon-purple" download>
+                        <span class="btn-content">Download Resume</span>
+                    </a>
                 </div>
             </div>
 
@@ -160,8 +168,8 @@
     <!-- Stats Section with Content -->
     <section class="stats-section" id="stats">
         <div class="section-header">
-            <h2 class="section-title">Performance Metrics</h2>
-            <p class="section-subtitle">Real-time analytics and technical achievements</p>
+            <h2 class="section-title">Performance Achievements</h2>
+            <p class="section-subtitle">Real-time analytics and technical milestones</p>
         </div>
 
         <div class="stats-grid">
@@ -203,7 +211,7 @@
     <section class="skills-section" id="skills">
         <div class="skills-container">
             <div class="section-header">
-                <h2 class="section-title">Technical Arsenal</h2>
+                <h2 class="section-title">Technical Stack</h2>
                 <p class="section-subtitle">Mastery of modern infrastructure, languages, and embedded systems</p>
             </div>
 
@@ -242,7 +250,7 @@
                     <div class="info-icon">📧</div>
                     <div class="info-text">
                         <h4>Email</h4>
-                        <p>contact@trinadh.dev</p> // Placeholder
+                        <p>contact@trinadhkatta22@gmail.com</p> // Placeholder
                     </div>
                 </a>
 
@@ -329,7 +337,7 @@
                 <div class="footer-links">
                     <a href="#about">About Me</a>
                     <a href="#home">Projects Carousel</a>
-                    <a href="#skills">Technical Arsenal</a>
+                    <a href="#skills">Tech Stack</a>
                     <a href="#contact">Contact</a>
                 </div>
             </div>
