--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
                     </div>
                 </a>
 
-                <a href="https://github.com/Mrkatta" target="_blank" class="info-item">
+                <a href="https://github.com/kattatrinadh" target="_blank" class="info-item">
                     <div class="info-icon">💻</div>
                     <div class="info-text">
                         <h4>GitHub</h4>
-                        <p>github.com/Mrkatta</p>
+                        <p>github.com/kattatrinadh</p>
                     </div>
                 </a>
 
@@ -317,7 +317,7 @@
                     convergence of scalable infrastructure and automation.
                 </p>
                 <div class="footer-social">
-                    <a href="https://github.com/Mrkatta" target="_blank" class="social-icon">Gh</a>
+                    <a href="https://github.com/kattatrinadh" target="_blank" class="social-icon">Gh</a>
                     <a href="https://linkedin.com/in/trinadhsundar" target="_blank" class="social-icon">In</a>
                 </div>
             </div>
