Refine resume buttons with custom download-btn class and purple neon styling

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 EMBEDDED SYSTEMS BACKGROUND
             </p>
             <div style="margin-top: 30px; pointer-events: auto;">
-                <a href="assets/pdf/Trinadh_dev.pdf" class="btn btn-neon-gold" download>
+                <a href="assets/pdf/Trinadh_dev.pdf" class="btn download-btn" download>
                     <span class="btn-content">Download CV</span>
                 </a>
             </div>
@@ -123,7 +123,7 @@
                         resilient infrastructures and optimizing CI/CD pipelines while maintaining the precision learned
                         from hardware-level development.
                     </p>
-                    <a href="assets/pdf/Trinadh_dev.pdf" class="btn btn-neon-purple" download>
+                    <a href="assets/pdf/Trinadh_dev.pdf" class="btn download-btn" download>
                         <span class="btn-content">Download Resume</span>
                     </a>
                 </div>
@@ -351,5 +351,3 @@
     </footer>
     <script src="templatemo-prism-scripts.js"></script>
 </body>
-
-</html>
