Update from Copilot 2026-02-25_16:12

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <div class="info-icon">📧</div>
                     <div class="info-text">
                         <h4>Email</h4>
-                        <p>contact@trinadhkatta22@gmail.com</p> // Placeholder
+                        <p>trinadhkatta22@gmail.com</p> 
                     </div>
                 </a>
 
