--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Portfolio of Trinadh Sundar - DevOps Engineer, Cloud Engineer, AWS, Azure, Kubernetes, Embedded Systems Engineer">
+        content="Portfolio of Katta Trinadh Sundar - DevOps Engineer, Cloud Engineer, AWS, Azure, Kubernetes, Embedded Systems Engineer">
     <meta name="keywords"
         content="DevOps Engineer, Cloud Engineer, AWS, Azure, Kubernetes, Embedded Systems Engineer, Docker, Linux, Trinadh Sundar">
-    <title>Trinadh Sundar - DevOps & Cloud Engineer</title>
+    <title>Katta Trinadh Sundar - DevOps & Cloud Engineer</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <span class="logo-text">
-                    <span class="prism">TRINADH</span>
+                    <span class="prism"> KattaTRINADH</span>
                     <span class="flux">SUNDAR</span>
                 </span>
             </a>
@@ -111,7 +111,7 @@
                 <div class="about-photo" style="flex: 0 0 350px; position: relative;">
                     <div
                         style="width: 350px; height: 450px; border-radius: 20px; overflow: hidden; border: 2px solid var(--accent-cyan); box-shadow: 0 0 30px rgba(0, 255, 255, 0.2);">
-                        <img src="images/profile.jpg" alt="Trinadh Sundar"
+                        <img src="images/profile.jpg" alt="KattaTrinadh Sundar"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                 </div>
@@ -308,7 +308,7 @@
                         </div>
                     </div>
                     <span class="logo-text">
-                        <span class="prism">TRINADH</span>
+                        <span class="prism">Katta TRINADH</span>
                         <span class="flux">SUNDAR</span>
                     </span>
                 </div>
