--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     </div>
                 </div>
                 <span class="logo-text">
-                    <span class="prism"> KattaTRINADH</span>
-                    <span class="flux">SUNDAR</span>
+                    <span class="prism"> Katta TRINADH</span>
+                    <span class="prism">SUNDAR</span>
                 </span>
             </a>
 
@@ -309,7 +309,7 @@
                     </div>
                     <span class="logo-text">
                         <span class="prism">Katta TRINADH</span>
-                        <span class="flux">SUNDAR</span>
+                        <span class="prism">SUNDAR</span>
                     </span>
                 </div>
                 <p class="footer-description">
