--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="about-photo" style="flex: 0 0 350px; position: relative;">
                     <div
                         style="width: 350px; height: 450px; border-radius: 20px; overflow: hidden; border: 2px solid var(--accent-cyan); box-shadow: 0 0 30px rgba(0, 255, 255, 0.2);">
-                        <img src="images/profile.jpg" alt="KattaTrinadh Sundar"
+                        <img src="images/trinadhphoto.jpeg" alt="KattaTrinadh Sundar"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                 </div>
