--- a/index.html
+++ b/index.html
@@ -206,7 +206,40 @@
             </div>
         </div>
 
-        
+        <!-- Certifications & Media Section -->
+        <div class="media-links-section" style="margin-top: 60px; text-align: center;">
+            <h3 style="color: var(--accent-cyan); font-family: 'Orbitron', sans-serif; margin-bottom: 30px; letter-spacing: 2px;">CERTIFICATIONS & MEDIA</h3>
+            <div class="media-grid">
+                <a href="assets/pdf/Trinadh_dev.pdf" target="_blank" class="media-card">
+                    <div class="media-icon">📄</div>
+                    <div class="media-content">
+                        <h4>Resume / CV</h4>
+                        <p>View Document</p>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="media-card">
+                    <div class="media-icon">🏆</div>
+                    <div class="media-content">
+                        <h4>Certificates</h4>
+                        <p>View Achievements</p>
+                    </div>
+                </a>
+                <a href="images/trinadhphoto.jpeg" target="_blank" class="media-card">
+                    <div class="media-icon">📸</div>
+                    <div class="media-content">
+                        <h4>Event Gallery</h4>
+                        <p>View Photos</p>
+                    </div>
+                </a>
+                <a href="https://github.com/kattatrinadh" target="_blank" class="media-card">
+                    <div class="media-icon">🔗</div>
+                    <div class="media-content">
+                        <h4>Other Links</h4>
+                        <p>Explore More</p>
+                    </div>
+                </a>
+            </div>
+        </div>
     </section>
 
     <!-- Enhanced Skills Section - Technical Arsenal -->
