--- a/index.html
+++ b/index.html
@@ -130,12 +130,15 @@
             </div>
 
             <div class="philosophy-pillars">
-                <div class="pillar">
+                <div class="pillar" style="cursor: pointer;" onclick="openModal('educationModal')">
                     <div class="pillar-icon">🎓</div>
                     <h3 class="pillar-title">Education</h3>
                     <p class="pillar-description">
                         <strong>B.Tech in Electronics and Communication Engineering</strong>. Gained a strong foundation
                         in hardware engineering, low-level electronics, and embedded programming concepts.
+                        <br><br><span
+                            style="color: var(--accent-cyan); font-size: 13px; text-transform: uppercase;">Click to view
+                            full academic history</span>
                     </p>
                 </div>
 
@@ -208,34 +211,36 @@
 
         <!-- Certifications & Media Section -->
         <div class="media-links-section" style="margin-top: 60px; text-align: center;">
-            <h3 style="color: var(--accent-cyan); font-family: 'Orbitron', sans-serif; margin-bottom: 30px; letter-spacing: 2px;">CERTIFICATIONS & MEDIA</h3>
+            <h3
+                style="color: var(--accent-cyan); font-family: 'Orbitron', sans-serif; margin-bottom: 30px; letter-spacing: 2px;">
+                CERTIFICATIONS & MEDIA</h3>
             <div class="media-grid">
-                <a href="assets/pdf/Trinadh_dev.pdf" target="_blank" class="media-card">
-                    <div class="media-icon">📄</div>
-                    <div class="media-content">
-                        <h4>Resume / CV</h4>
-                        <p>View Document</p>
-                    </div>
-                </a>
-                <a href="#" target="_blank" class="media-card">
+                <a href="javascript:void(0)" onclick="openModal('certificatesModal')" class="media-card">
                     <div class="media-icon">🏆</div>
                     <div class="media-content">
                         <h4>Certificates</h4>
-                        <p>View Achievements</p>
+                        <p class="media-action">View All Certificates</p>
                     </div>
                 </a>
-                <a href="images/trinadhphoto.jpeg" target="_blank" class="media-card">
+                <a href="javascript:void(0)" onclick="openModal('patentModal')" class="media-card">
+                    <div class="media-icon">🔬</div>
+                    <div class="media-content">
+                        <h4>Patent</h4>
+                        <p class="media-action">View Patent Details</p>
+                    </div>
+                </a>
+                <a href="javascript:void(0)" onclick="openModal('galleryModal')" class="media-card">
                     <div class="media-icon">📸</div>
                     <div class="media-content">
                         <h4>Event Gallery</h4>
-                        <p>View Photos</p>
+                        <p class="media-action">View All Photos</p>
                     </div>
                 </a>
-                <a href="https://github.com/kattatrinadh" target="_blank" class="media-card">
+                <a href="javascript:void(0)" onclick="openModal('linksModal')" class="media-card">
                     <div class="media-icon">🔗</div>
                     <div class="media-content">
                         <h4>Other Links</h4>
-                        <p>Explore More</p>
+                        <p class="media-action">View Additional Links</p>
                     </div>
                 </a>
             </div>
@@ -285,7 +290,7 @@
                     <div class="info-icon">📧</div>
                     <div class="info-text">
                         <h4>Email</h4>
-                        <p>trinadhkatta22@gmail.com</p> 
+                        <p>trinadhkatta22@gmail.com</p>
                     </div>
                 </a>
 
@@ -384,5 +389,213 @@
             </div>
         </div>
     </footer>
+    <!-- Media Modals -->
+    <div id="certificatesModal" class="media-modal">
+        <div class="media-modal-content">
+            <span class="close-modal" onclick="closeModal('certificatesModal')">&times;</span>
+            <div class="modal-header">
+                <div class="modal-icon">🏆</div>
+                <h2>Certificates Directory</h2>
+                <p>Click any document to view the full PDF.</p>
+            </div>
+            <div class="modal-items-grid">
+                <a href="assets/pdf/Trinadh_dev.pdf" target="_blank" class="modal-item">
+                    <div class="item-icon">📄</div>
+                    <div class="item-details">
+                        <h4>AWS Certified Developer</h4>
+                        <p>View PDF Document</p>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="modal-item">
+                    <div class="item-icon">📄</div>
+                    <div class="item-details">
+                        <h4>Azure Fundamentals</h4>
+                        <p>View PDF Document</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div id="patentModal" class="media-modal">
+        <div class="media-modal-content">
+            <span class="close-modal" onclick="closeModal('patentModal')">&times;</span>
+            <div class="modal-header">
+                <div class="modal-icon">🔬</div>
+                <h2>Patent Publications</h2>
+                <p>Detailed documentation of published patents and research.</p>
+            </div>
+            <div class="modal-items-grid">
+                <a href="#" target="_blank" class="modal-item">
+                    <div class="item-icon">📄</div>
+                    <div class="item-details">
+                        <h4>Embedded Security Framework</h4>
+                        <p>View Full Patent Detail Document</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div id="galleryModal" class="media-modal">
+        <div class="media-modal-content">
+            <span class="close-modal" onclick="closeModal('galleryModal')">&times;</span>
+            <div class="modal-header">
+                <div class="modal-icon">📸</div>
+                <h2>Event Gallery</h2>
+                <p>Photos from technical conferences, hackathons, and speaking events.</p>
+            </div>
+            <div class="modal-items-grid">
+                <a href="images/trinadhphoto.jpeg" target="_blank" class="modal-item">
+                    <div class="item-cover" style="background-image: url('images/trinadhphoto.jpeg');"></div>
+                    <div class="item-details">
+                        <h4>DevOps Summit 2025</h4>
+                        <p>Speaking about multi-cloud architecture and container orchestrations.</p>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="modal-item">
+                    <div class="item-cover" style="background-color: var(--carbon-medium);"></div>
+                    <div class="item-details">
+                        <h4>Embedded Systems Hackathon</h4>
+                        <p>Winning prototype demonstration and award ceremony.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div id="linksModal" class="media-modal">
+        <div class="media-modal-content">
+            <span class="close-modal" onclick="closeModal('linksModal')">&times;</span>
+            <div class="modal-header">
+                <div class="modal-icon">🔗</div>
+                <h2>Featured Links</h2>
+                <p>External articles, repositories, and technical resources.</p>
+            </div>
+            <div class="modal-items-grid">
+                <a href="https://github.com/kattatrinadh" target="_blank" class="modal-item">
+                    <div class="item-icon">💻</div>
+                    <div class="item-details">
+                        <h4>GitHub Repository Tracker</h4>
+                        <p>View open source contributions and project libraries.</p>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="modal-item">
+                    <div class="item-icon">📝</div>
+                    <div class="item-details">
+                        <h4>Medium Tech Blog</h4>
+                        <p>Read detailed articles about AWS infrastructure and automation.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Education Timeline Modal -->
+    <div id="educationModal" class="media-modal">
+        <div class="media-modal-content" style="max-width: 800px;">
+            <span class="close-modal" onclick="closeModal('educationModal')">&times;</span>
+            <div class="modal-header">
+                <div class="modal-icon">🏛️</div>
+                <h2>Academic History</h2>
+                <p>Complete timeline of academic qualifications and degrees.</p>
+            </div>
+
+            <div class="education-timeline">
+
+                <!-- College Level -->
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <div class="edu-details-list">
+                            <div class="edu-detail-row">
+                                <span class="edu-label">College Name:</span>
+                                <span class="edu-value" style="color: var(--accent-cyan); font-weight: 600;">Your
+                                    College / University Name</span>
+                            </div>
+                            <div class="edu-detail-row">
+                                <span class="edu-label">Branch:</span>
+                                <span class="edu-value">B.Tech</span>
+                            </div>
+                            <div class="edu-detail-row">
+                                <span class="edu-label">Specialization:</span>
+                                <span class="edu-value">Electronics and Communication Engineering</span>
+                            </div>
+                            <div class="edu-detail-row">
+                                <span class="edu-label">Percentage:</span>
+                                <span class="edu-value">8.5 / 10</span>
+                            </div>
+                            <div class="edu-detail-row">
+                                <span class="edu-label">Duration:</span>
+                                <span class="edu-value">📅 2018 - 2022</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Intermediate -->
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <div class="edu-details-list">
+                            <div class="edu-detail-row">
+                                <span class="edu-label">College Name:</span>
+                                <span class="edu-value" style="color: var(--accent-cyan); font-weight: 600;">Your
+                                    Intermediate College Name</span>
+                            </div>
+                            <div class="edu-detail-row">
+                                <span class="edu-label">Branch:</span>
+                                <span class="edu-value">Intermediate / 12th Standard</span>
+                            </div>
+                            <div class="edu-detail-row">
+                                <span class="edu-label">Specialization:</span>
+                                <span class="edu-value">MPC (Maths, Physics, Chemistry)</span>
+                            </div>
+                            <div class="edu-detail-row">
+                                <span class="edu-label">Percentage:</span>
+                                <span class="edu-value">92%</span>
+                            </div>
+                            <div class="edu-detail-row">
+                                <span class="edu-label">Duration:</span>
+                                <span class="edu-value">📅 2016 - 2018</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- School -->
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <div class="edu-details-list">
+                            <div class="edu-detail-row">
+                                <span class="edu-label">School Name:</span>
+                                <span class="edu-value" style="color: var(--accent-cyan); font-weight: 600;">Your School
+                                    Name</span>
+                            </div>
+                            <div class="edu-detail-row">
+                                <span class="edu-label">Branch:</span>
+                                <span class="edu-value">SSC / 10th Standard</span>
+                            </div>
+                            <div class="edu-detail-row">
+                                <span class="edu-label">Specialization:</span>
+                                <span class="edu-value">General Studies</span>
+                            </div>
+                            <div class="edu-detail-row">
+                                <span class="edu-label">Percentage:</span>
+                                <span class="edu-value">9.8 / 10</span>
+                            </div>
+                            <div class="edu-detail-row">
+                                <span class="edu-label">Duration:</span>
+                                <span class="edu-value">📅 2015 - 2016</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <script src="templatemo-prism-scripts.js"></script>
 </body>
